--- a/roles/containers/services/nextcloud/tasks/main.yml
+++ b/roles/containers/services/nextcloud/tasks/main.yml
@@ -1,8 +1,45 @@
 ---
+# 1. At the very beginning of time configure the main user. Select MariaDB:
+#    * {{ nextcloud_user }}  # this has to be equal to {{ username }} if you want PhotoPrism to share the same folder
+#    * {{ nextcloud_password }}
+#    * "/data"
+#    * {{ mysql_user }}
+#    * {{ mysql_password }}
+#    * "nextcloud_db"
+#    * "nextcloud-mariadb:3306"
+#
+# 2. It might take some time. You cannot mount {{ mergerfs_root }}/Nextcloud/{{ username }} before creating the user
+#    or it will complain about permissions. So first craete a {{ username }} user, then stop and remove the container,
+#    move {{ docker_dir }}/{{ container_name }}/data/{{ username }} to {{ mergerfs_root }}/Nextcloud/ and launch
+#    ansible role again with the mount active.
+
+- name: Create the necessary {{ container_name }} folders (1)
+  file:
+    path: "{{ docker_dir }}/{{ container_name }}/mariadb/"
+    state: directory
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: 0755
+
+- name: Create the necessary {{ container_name }} folders (2)
+  file:
+    path: "{{ docker_dir }}/{{ container_name }}/config/"
+    state: directory
+    owner: "{{ username }}"
+    group: "{{ username }}"
+
+- name: Create the necessary {{ container_name }} folders (3)
+  file:
+    path: "{{ docker_dir }}/{{ container_name }}/data/"
+    state: directory
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: 0755
+
 - name: Make sure the MariaDB container is created and running
   docker_container:
     name: "nextcloud-mariadb"
-    image: "mariadb:latest"
+    image: "mariadb"
     pull: yes
     command: "--transaction-isolation=READ-COMMITTED --binlog-format=ROW --skip-innodb-read-only-compressed --innodb-read-only-compressed=OFF"
     state: 'started'
@@ -11,16 +48,15 @@
       "flame.name": "{{ container_name | title }}"
       "flame.url": "{{ dashboard_url }}"
       "flame.icon": "custom"
+    user: "{{ guid }}:{{ guid }}"
     env:
-      "PUID": "{{ guid }}"
-      "PGID": "{{ guid }}"
       "TZ": "{{ timezone }}"
       "MYSQL_ROOT_PASSWORD": "{{ mysql_root_password }}"
-      "MYSQL_DATABASE": "{{ mysql_db }}"
+      "MYSQL_DATABASE": "nextcloud_db"
       "MYSQL_USER": "{{ mysql_user }}"
       "MYSQL_PASSWORD": "{{ mysql_password }}"
     volumes:
-      - "{{ docker_dir }}/{{ container_name }}/mariadb/mysql:/var/lib/mysql"
+      - "{{ docker_dir }}/{{ container_name }}/mariadb:/var/lib/mysql"
     restart_policy: unless-stopped
     
 - name: Make sure the Redis container is created and running
@@ -41,6 +77,13 @@
       "PUID": "{{ guid }}"
       "PGID": "{{ guid }}"
       "TZ": "{{ timezone }}"
+      "MYSQL_USER": "{{ mysql_user }}"
+      "MYSQL_PASSWORD": "{{ mysql_password }}"
+      "MYSQL_DATABASE": "nextcloud_db"
+      "MYSQL_HOST": "nextcloud-mariadb"
+      "NEXTCLOUD_ADMIN_USER": "{{ nextcloud_user }}"
+      "NEXTCLOUD_ADMIN_PASSWORD": "{{ nextcloud_password }}"
+      "NEXTCLOUD_DATA_DIR": /data
     volumes:
       - "{{ docker_dir }}/{{ container_name }}/config:/config"
       - "{{ docker_dir }}/{{ container_name }}/data:/data"
