--- a/roles/containers/services/photoprism/tasks/main.yml
+++ b/roles/containers/services/photoprism/tasks/main.yml
@@ -1,4 +1,20 @@
 ---
+- name: Create the necessary {{ container_name }} folder (1)
+  file:
+    path: "{{ docker_dir }}/{{ container_name }}/mariadb/"
+    state: directory
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: 0755
+
+- name: Create the necessary {{ container_name }} folder (1)
+  file:
+    path: "{{ docker_dir }}/{{ container_name }}/storage/"
+    state: directory
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: 0755
+
 - name: Make sure the PhotoPrism MariaDB container is created and running
   docker_container:
     name: "photoprism-mariadb"
@@ -6,23 +22,23 @@
     pull: yes
     command: "mysqld --transaction-isolation=READ-COMMITTED --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --max-connections=512 --innodb-rollback-on-timeout=OFF --innodb-lock-wait-timeout=120"
     state: 'started'
+    user: "{{ guid }}:{{ guid }}"
     env:
       "TZ": "{{ timezone }}"
       "MYSQL_ROOT_PASSWORD": "{{ mysql_root_password }}"
-      "MYSQL_DATABASE": "{{ mysql_db }}"
+      "MYSQL_DATABASE": "photoprism_db"
       "MYSQL_USER": "{{ mysql_user }}"
       "MYSQL_PASSWORD": "{{ mysql_password }}"
     volumes:
-      - "{{ docker_dir }}/{{ container_name }}/mariadb/mysql:/var/lib/mysql"
+      - "{{ docker_dir }}/{{ container_name }}/mariadb:/var/lib/mysql"
     restart_policy: unless-stopped
-    
 
 - name: Make sure the Photoprism container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: photoprism/photoprism:latest
     pull: yes
-    expose: 
+    expose:
       - "2342"
     security_opts:
       - seccomp:unconfined
@@ -30,10 +46,9 @@
     state: 'started'
     shm_size: 2G
     env:
-      "UID": "{{ guid }}"
-      "GID": "{{ guid }}"
       "PHOTOPRISM_GID": "{{ guid }}"
       "PHOTOPRISM_UID": "{{ guid }}"
+      "PHOTOPRISM_UMASK": "0000"
       "TZ": "{{ timezone }}"
       "PHOTOPRISM_ADMIN_PASSWORD": "{{ photoprism_password }}"
       "PHOTOPRISM_SITE_URL": "http://{{ ansible_default_ipv4.address }}:2342/"
@@ -43,23 +58,23 @@
       "PHOTOPRISM_HTTP_COMPRESSION": "gzip"
       "PHOTOPRISM_DATABASE_DRIVER": "mysql"
       "PHOTOPRISM_DATABASE_SERVER": "photoprism-mariadb:3306"
-      "PHOTOPRISM_DATABASE_NAME": "{{ mysql_db }}"
+      "PHOTOPRISM_DATABASE_NAME": "photoprism_db"
       "PHOTOPRISM_DATABASE_USER": "{{ mysql_user }}"
       "PHOTOPRISM_DATABASE_PASSWORD": "{{ mysql_password }}"
-      "PHOTOPRISM_DISABLE_CHOWN": "false"              
-      "PHOTOPRISM_DISABLE_BACKUPS": "true"            
-      "PHOTOPRISM_DISABLE_WEBDAV": "true"             
+      "PHOTOPRISM_DISABLE_CHOWN": "false"
+      "PHOTOPRISM_DISABLE_BACKUPS": "true"
+      "PHOTOPRISM_DISABLE_WEBDAV": "true"
       "PHOTOPRISM_DETECT_NSFW": "true"
       "PHOTOPRISM_UPLOAD_NSFW": "false"
       "PHOTOPRISM_THUMB_FILTER": "lanczos"
       "PHOTOPRISM_THUMB_UNCACHED": "true"
       "PHOTOPRISM_THUMB_SIZE": "2048"
-      "PHOTOPRISM_THUMB_SIZE_UNCACHED": "7680"           
-      "PHOTOPRISM_JPEG_SIZE": "7680" 
+      "PHOTOPRISM_THUMB_SIZE_UNCACHED": "7680"
+      "PHOTOPRISM_JPEG_SIZE": "7680"
       "PHOTOPRISM_JPEG_QUALITY": "92"
-      "TF_CPP_MIN_LOG_LEVEL": "0" 
-      "PHOTOPRISM_FFMPEG_ENCODER": "h264_qsv"        
-      "PHOTOPRISM_INIT": "intel-graphics tensorflow-amd64-avx2" 
+      "TF_CPP_MIN_LOG_LEVEL": "0"
+      "PHOTOPRISM_FFMPEG_ENCODER": "h264_qsv"
+      "PHOTOPRISM_INIT": "intel-graphics tensorflow-amd64-avx"
     devices:
       - "/dev/dri/renderD128:/dev/dri/renderD128" # Intel GPU
     working_dir: "/photoprism"
