--- a/roles/homer/defaults/main.yml
+++ b/roles/homer/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 container_name: homer
-homer_title: "I don't know if they let cowboys in"
-homer_subtitle: "When I die, I may not go to heaven"
+homer_title: "Welcome to Cata Falco dashboard!"
+homer_subtitle: "I wish I could fly"
