--- a/roles/homer/tasks/assets.yml
+++ b/roles/homer/tasks/assets.yml
@@ -3,22 +3,39 @@
   file:
     path: "{{ docker_dir }}/{{ container_name }}/tools/homer-icons"
     state: directory
-  
+    mode: 0755
+    owner: "{{ username }}"
+    group: "{{ username }}"
+
 - name: Copy the icons
   copy:
     src: "files/icons/{{ item.path.split('/')[-1] }}.png"
-    dest: "{{ docker_dir }}/{{ container_name}}/tools/homer-icons"
+    dest: "{{ docker_dir }}/{{ container_name }}/tools/homer-icons"
     owner: "{{ username }}"
     group: "{{ username }}"
+    mode: 0644
   when: lookup('vars', 'enable_' + item.path.split('/')[-1]) | default(False) and lookup('vars', item.path.split('/')[-1])['dashboard_url'] is defined
   with_items: "{{ containers.files }}"
 
-- name: Copy the logo
+- name: Copy the icons for other dashboard elements
   copy:
-    src: "files/icons/logo.jpg"
-    dest: "{{ docker_dir }}/{{ container_name}}/tools/homer-icons"
+    src: "files/icons/{{ item }}"
+    dest: "{{ docker_dir }}/{{ container_name }}/tools/homer-icons"
     owner: "{{ username }}"
     group: "{{ username }}"
+    mode: 0644
+  with_items:
+    - pihole.png
+    - pikvm.png
+    - linuxserver.png
+
+- name: Copy the logo
+  copy:
+    src: "files/icons/logo.png"
+    dest: "{{ docker_dir }}/{{ container_name }}/tools/homer-icons"
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: 0644
 
 - name: Copy the custom stylesheet
   copy:
@@ -26,10 +43,12 @@
     dest: "{{ docker_dir }}/{{ container_name }}"
     owner: "{{ username }}"
     group: "{{ username }}"
+    mode: 0644
 
 - name: Generate the Homer config file
   template:
     src: config.yml.j2
-    dest: "{{ docker_dir }}/{{ container_name}}/config.yml"
+    dest: "{{ docker_dir }}/{{ container_name }}/config.yml"
     owner: "{{ username }}"
     group: "{{ username }}"
+    mode: 0644
