--- a/roles/system/tasks/dotfiles.yml
+++ b/roles/system/tasks/dotfiles.yml
@@ -1,12 +1,47 @@
 ---
-- name: Clone the latest dotfiles repo
-  git:
-    repo: "{{ dotfiles_repo }}"
-    dest: /home/{{ username }}/dotfiles
-    recursive: no
-    force: yes
+#- name: Clone the latest dotfiles repo
+#  become: no
+#  git:
+#    repo: "{{ dotfiles_repo }}"
+#    dest: "/home/{{ username }}/dotfiles"
+#    recursive: no
+#    force: yes
+#
+#- name: Stow the dotfiles
+#  become: no
+#  shell:
+#    cmd: stow -v */
+#    chdir: "/home/{{ username }}/dotfiles"
+#  register: stow_result
+#  changed_when: stow_result.stdout != ""
 
-- name: Stow the dotfiles
-  shell: cd /home/{{ username }}/dotfiles && stow -v */
-  register: stow_result
-  changed_when: stow_result.stdout != ""
+- name: Installing Zsh and git
+  apt:
+    pkg:
+      - zsh,
+      - git
+    state: latest
+  register: installation
+  become: true
+
+- name: Check if .zshrc exists
+  stat:
+    path: "/home/{{ username }}/.zshrc"
+  register: stat_rc_result
+
+- name: Check if .oh-my-zsh exists
+  stat:
+    path: "/home/{{ username }}/.oh-my-zsh"
+  register: stat_oh_my_zsh_result
+
+- name: Cloning  oh-my-zsh
+  git:
+    repo: https://github.com/robbyrussell/oh-my-zsh
+    dest: "/home/{{ username }}/.oh-my-zsh"
+  when: not stat_oh_my_zsh_result.stat.exists
+
+- name: Creating new ~/.zshrc
+  copy:
+    src: "/home/{{ username }}/.oh-my-zsh/templates/zshrc.zsh-template"
+    dest: "/home/{{ username }}/.zshrc"
+  when: not stat_rc_result.stat.exists
