--- a/run.yml
+++ b/run.yml
@@ -2,14 +2,14 @@
 #
 # Tasks and roles for all hosts
 #
-#- hosts: gaia
+#- hosts: catafalco
 #  gather_facts: no
 #
 #  pre_tasks:
 #    - import_tasks: tasks/ssh_juggle_port.yml
 #      tags:
 #        - port
-- hosts: gaia
+- hosts: catafalco
   gather_facts: no
 
   pre_tasks:
@@ -17,7 +17,7 @@
       tags:
         - port
 
-- hosts: gaia
+- hosts: catafalco
   become: yes
   roles:
 
@@ -161,10 +161,10 @@
 
     #
     # Homer
-    # 
+    #
     - role: homer
       become: no
-      tags: 
+      tags:
         - homer
         - containers
       when: enable_homer | default(False)
@@ -174,7 +174,7 @@
     #
     - role: containers/system/jackett
       become: no
-      tags: 
+      tags:
         - jackett
         - containers
       when: enable_jackett | default(False)
@@ -199,54 +199,69 @@
         - containers
       when: enable_unifi | default(False)
 
+    # Monitoring
+
+    - role: containers/system/influxdb
+      tags:
+        - influxdb
+        - containers
+        - monitoring
+      when: enable_influxdb | default(False)
+
+    - role: monitoring/telegraf
+      tags:
+        - telegraf
+        - monitoring
+      when: enable_telegraf | default(False)
+
     #
     # Media
     #
     - role: containers/media/deluge
       become: no
-      tags: 
+      tags:
         - deluge
         - containers
       when: enable_deluge | default(False)
 
     - role: containers/media/sonarr
       become: no
-      tags: 
+      tags:
         - sonarr
         - containers
       when: enable_sonarr | default(False)
 
     - role: containers/media/radarr
       become: no
-      tags: 
+      tags:
         - radarr
         - containers
       when: enable_radarr | default(False)
 
     - role: containers/media/booksonic
       become: no
-      tags: 
+      tags:
         - booksonic
         - containers
       when: enable_booksonic | default(False)
 
     - role: containers/media/plex
       become: no
-      tags: 
+      tags:
         - plex
         - containers
       when: enable_plex | default(False)
 
     - role: containers/media/jellyfin
       become: no
-      tags: 
+      tags:
         - jellyfin
         - containers
       when: enable_jellyfin | default(False)
 
     - role: containers/media/openbooks
       become: no
-      tags: 
+      tags:
         - openbooks
         - containers
       when: enable_openbooks | default(False)
@@ -256,17 +271,24 @@
     #
     - role: containers/services/photoprism
       become: no
-      tags: 
+      tags:
         - photoprism
         - containers
       when: enable_photoprism | default(False)
 
     - role: containers/services/nextcloud
       become: no
-      tags: 
+      tags:
         - nextcloud
         - containers
       when: enable_nextcloud | default(False)
+
+    - role: containers/services/duplicati
+      become: no
+      tags:
+        - duplicati
+        - containers
+      when: enable_duplicati | default(False)
 
     - role: containers/services/vaultwarden
       become: no
@@ -274,13 +296,13 @@
         - vaultwarden
         - containers
       when: enable_vaultwarden | default(False)
- 
+
     #
     # Home automation
     #
     - role: containers/homeautomation/deconz
       become: no
-      tags: 
+      tags:
         - deconz
         - smarthome
         - containers
@@ -288,7 +310,7 @@
 
     - role: containers/homeautomation/homeassistant
       become: no
-      tags: 
+      tags:
         - homeassistant
         - smarthome
         - containers
@@ -299,6 +321,6 @@
     #
     - role: bertvv.samba
       become: yes
-      tags: 
+      tags:
         - samba
       when: enable_nas_stuff | default(False)
