--- a/roles/containers/services/duplicati/tasks/main.yml
+++ b/roles/containers/services/duplicati/tasks/main.yml
@@ -1,3 +1,4 @@
+# https://www.arsouyes.org/en/blog/2020/30_duplicati
 ---
 - name: Make sure the Duplicati container is created and running
   docker_container:
@@ -11,7 +12,11 @@
       "TZ": "{{ timezone }}"
     volumes:
       - "{{ docker_dir }}/{{ container_name }}/config:/config"
-      - "{{ mergerfs_root }}/Media:/source"
+      - "{{ docker_dir }}/config:/config"
+      - "{{ mergerfs_root }}/docker-volumes-backup:/backups"
+      - "{{ mergerfs_root }}/Documents:/source/Documents:ro"
+      - "{{ mergerfs_root }}/Media:/source/Media:ro"
+      - "{{ mergerfs_root }}/Music:/source/Music:ro"
     restart_policy: unless-stopped
 
 - name: Add {{ container_name }} to the SWAG network (reverse-proxy)
