Changes configurations, added few services.

--- a/roles/containers/media/jellyfin/defaults/main.yml
+++ b/roles/containers/media/jellyfin/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 container_name: jellyfin
 
-dashboard_url: "http://jellyfin.{{ host_local }}"
+dashboard_url: "https://jellyfin.{{ host_local }}"
 
 homer_category: media
 
