--- a/roles/containers/system/authelia/tasks/main.yml
+++ b/roles/containers/system/authelia/tasks/main.yml
@@ -15,7 +15,7 @@
 
 - name: Add {{ container_name }} to the SWAG network (reverse-proxy)
   docker_network:
-    name: swag_network
+    name: swag_public_network
     connected:
       - "{{ container_name }}"
     appends: yes
