--- a/roles/containers/media/deluge/tasks/main.yml
+++ b/roles/containers/media/deluge/tasks/main.yml
@@ -1,30 +1,43 @@
+# The WireGuard configuration file will be auto generated and will be stored in
+# /config/wireguard/wg0.conf AFTER the first run.
+# Please download your WireGuard configuration file from your VPN provider, start
+# and stop the container to generate the folder /config/wireguard/ and then place
+# your WireGuard configuration file in there.
+
+# Check VPN configuration (mullvad)
+# ```shell
+#    docker exec deluge curl https://am.i.mullvad.net/connected
+# ```
+
+# Check if client is using VPN correctly. Add the following "fake" torrent link
+# with the client `http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent`
+# then check tracker status. It should give an error of the kind: "Error: Success, your
+# torrent client IP is: x.x.x.x".
 ---
 - name: Create the configuration directory
   file:
     path: "{{ docker_dir }}/{{ container_name }}"
     state: directory
 
-- name: Install the iptables.sh config
-  copy:
-    src: "files/iptable.sh"
-    dest: "{{ docker_dir }}/{{ container_name }}/iptable.sh"
-    owner: "{{ username }}"
-    group: "{{ username }}"
+#- name: Install the iptables.sh config
+#  copy:
+#    src: "files/iptable.sh"
+#    dest: "{{ docker_dir }}/{{ container_name }}/iptable.sh"
+#    owner: "{{ username }}"
+#    group: "{{ username }}"
+#    mode: 0644
 
 - name: Make sure the Deluge container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "binhex/arch-delugevpn:latest"
     pull: yes
+    networks:
+      - name: swag_internal_network
     privileged: yes
-    labels:
-      "flame.type": "application"
-      "flame.name": "{{ container_name | title }}"
-      "flame.url": "{{ dashboard_url }}"
-      "flame.icon": "custom"
     sysctls:
       "net.ipv4.conf.all.src_valid_mark": "1"
-    capabilities: 
+    capabilities:
       - net_admin
     state: 'started'
     env:
@@ -32,8 +45,8 @@
       "VPN_PROV": custom
       "VPN_CLIENT": "wireguard"
       "ENABLE_PRIVOXY": "yes"
-      "LAN_NETWORK": "172.18.0.0/16, {{ lan_network }}"
-      "NAME_SERVERS": "1.1.1.1, 1.0.0.1"
+      "LAN_NETWORK": "172.18.0.0/16,{{ lan_network }}"
+      "NAME_SERVERS": "9.9.9.9, 149.112.112.112"
       "DELUGE_DAEMON_LOG_LEVEL": "info"
       "DELUGE_WEB_LOG_LEVEL": "info"
       "DEBUG": "true"
@@ -41,21 +54,9 @@
       "PUID": "{{ guid }}"
       "PGID": "{{ guid }}"
       "TZ": "{{ timezone }}"
-    ports:
-      - "8112:8112"
-      - "58846:58846"
     volumes:
       - "{{ docker_dir }}/{{ container_name }}/data:/data"
       - "{{ docker_dir }}/{{ container_name }}/config:/config"
-      - "{{ docker_dir }}/{{ container_name }}/iptable.sh:/root/iptable.sh"
       - "{{ mergerfs_root }}/Downloads:/home/nobody/Downloads"
       - "/etc/localtime:/etc/localtime:ro"
     restart_policy: unless-stopped
-
-- name: Add {{ container_name }} to the SWAG network (reverse-proxy)
-  docker_network:
-    name: swag_internal_network
-    connected:
-      - deluge
-    appends: yes
-  when: enable_swag
