--- a/roles/containers/media/sonarr/tasks/main.yml
+++ b/roles/containers/media/sonarr/tasks/main.yml
@@ -4,11 +4,8 @@
     name: "{{ container_name }}"
     image: "ghcr.io/linuxserver/sonarr"
     pull: yes
-    labels:
-      "flame.type": "application"
-      "flame.name": "{{ container_name | title }}"
-      "flame.url": "{{ dashboard_url }}"
-      "flame.icon": "custom"
+    networks:
+      - name: swag_internal_network
     state: 'started'
     env:
       "PUID": "{{ guid }}"
@@ -17,14 +14,5 @@
     volumes:
       - "/etc/localtime:/etc/localtime:ro"
       - "{{ docker_dir }}/{{ container_name }}:/config"
-      - "{{ mergerfs_root }}/Media/TV:/tv"
-      - "{{ mergerfs_root }}/Downloads:/downloads"
+      - "{{ mergerfs_root }}:/storage"
     restart_policy: unless-stopped
-
-- name: Add {{ container_name }} to the SWAG network (reverse-proxy)
-  docker_network:
-    name: swag_internal_network
-    connected:
-      - "{{ container_name }}"
-    appends: yes
-  when: enable_swag
