--- a/roles/containers/services/vaultwarden/tasks/main.yml
+++ b/roles/containers/services/vaultwarden/tasks/main.yml
@@ -4,29 +4,17 @@
   docker_container:
     name: 'vaultwarden'
     image: "vaultwarden/server"
+    networks:
+      - name: swag_public_network
     pull: true
     state: 'started'
-    labels:
-      "flame.type": "application"
-      "flame.name": "{{ container_name | title }}"
-      "flame.url": "{{ dashboard_url }}"
-      "flame.icon": "custom"
     env:
       WEBSOCKET_ENABLED: "true"
       INVITATIONS_ALLOWED: "false"
       SIGNUPS_ALLOWED: "false"
-      DOMAIN: "{{ dashboard_url }}"
+      DOMAIN: "https://{{ subdomains['vaultwarden'] }}.{{ host }}"
       LOG_FILE: "/data/vaultwarden.log"
       TZ: "{{ timezone }}"
     volumes:
       - "{{ docker_dir }}/{{ container_name }}:/data"
     restart_policy: unless-stopped
-
-
-- name: Add {{ container_name }} to the SWAG network (reverse-proxy)
-  docker_network:
-    name: swag_network
-    connected:
-      - vaultwarden
-    appends: yes
-  when: enable_swag
