--- a/roles/containers/system/influxdb/tasks/main.yml
+++ b/roles/containers/system/influxdb/tasks/main.yml
@@ -4,6 +4,8 @@
     name: "{{ container_name }}"
     image: "influxdb"
     pull: yes
+    networks:
+      - name: swag_internal_network
     state: 'started'
     env:
       DOCKER_INFLUXDB_INIT_MODE: "setup"
@@ -13,14 +15,15 @@
       DOCKER_INFLUXDB_INIT_BUCKET: "{{ influxdb_bucket }}"
     volumes:
       - "{{ docker_dir }}/{{ container_name }}:/var/lib/influxdb2"
+      - "/var/run/docker.sock:/var/run/docker.sock"
     ports:
-      - 8086:8086/tcp
+      - 127.0.0.1:8086:8086/tcp
     restart_policy: unless-stopped
 
-- name: Add {{ container_name }} to the SWAG network (reverse-proxy)
-  docker_network:
-    name: swag_internal_network
-    connected:
-      - "{{ container_name }}"
-    appends: yes
-  when: enable_swag
+#- name: Add {{ container_name }} to the SWAG network (reverse-proxy)
+#  docker_network:
+#    name: swag_internal_network
+#    connected:
+#      - "{{ container_name }}"
+#    appends: yes
+#  when: enable_swag
