--- a/roles/containers/system/jackett/tasks/main.yml
+++ b/roles/containers/system/jackett/tasks/main.yml
@@ -3,12 +3,9 @@
   docker_container:
     name: "{{ container_name }}"
     image: "ghcr.io/linuxserver/jackett"
-    labels:
-      "flame.type": "application"
-      "flame.name": "{{ container_name | title }}"
-      "flame.url": "{{ dashboard_url }}"
-      "flame.icon": "custom"
     pull: yes
+    networks:
+      - name: swag_internal_network
     state: 'started'
     env:
       "PUID": "{{ guid }}"
@@ -19,10 +16,10 @@
       - "{{ docker_dir }}/{{ container_name }}:/config"
     restart_policy: unless-stopped
 
-- name: Add {{ container_name }} to the SWAG network (reverse-proxy)
-  docker_network:
-    name: swag_internal_network
-    connected:
-      - "{{ container_name }}"
-    appends: yes
-  when: enable_swag
+#- name: Add {{ container_name }} to the SWAG network (reverse-proxy)
+#  docker_network:
+#    name: swag_internal_network
+#    connected:
+#      - "{{ container_name }}"
+#    appends: yes
+#  when: enable_swag
