--- a/roles/system/tasks/user.yml
+++ b/roles/system/tasks/user.yml
@@ -11,6 +11,7 @@
     groups: 
       - "{{ sudo_group }}"
       - users
+    shell: "{{ shell }}"
     state: present
     append: true
  
@@ -57,15 +58,6 @@
     name: "{{ username }}"
     shell: "{{ shell }}"
 
-- name: Disable fish greeting
-  lineinfile:
-    path: /home/{{ username }}/.config/fish/fish_variables
-    state: present
-    regexp: 'fish_greeting:.+'
-    line: 'SETUVAR fish_greeting:'
-  when: '"fish" in shell'
-  ignore_errors: true
-
 - name: Suppress login messages
   file:
     name: /home/{{ username }}/.hushlogin
@@ -90,6 +82,6 @@
     state: present
     append: true
     shell: /sbin/nologin
-  with_items: "{{ additional_users }}"
-  when: additional_users is defined
+  with_items: "{{ samba_users }}"
+  when: samba_users is defined
   no_log: true
