--- a/roles/containers/system/authelia/defaults/main.yml
+++ b/roles/containers/system/authelia/defaults/main.yml
@@ -1,4 +1,6 @@
 ---
 container_name: authelia
 
-dashboard_url: "http://authelia.{{ host_local }}"
+dashboard_url: "https://authelia.{{ host_local }}/"
+
+homer_category: system
