--- a/roles/containers/system/authelia/tasks/main.yml
+++ b/roles/containers/system/authelia/tasks/main.yml
@@ -1,33 +1,11 @@
 ---
-    
-- name: Make sure the {{ container_name }} container is created and running
-  docker_container:
-    name: "{{ container_name }}"
-    image: "authelia/authelia:latest"
-    pull: true
-    state: 'started'
-    env:
-      TZ: "{{ timezone }}"
-    volumes:
-      - "{{ docker_dir }}/{{ container_name }}:/config"
-    restart_policy: unless-stopped
-  register: container
-
-- name: Add {{ container_name }} to the SWAG network (reverse-proxy)
-  docker_network:
-    name: swag_public_network
-    connected:
-      - "{{ container_name }}"
-    appends: yes
-  when: enable_swag
-  
-
 - name: Create the configuration directory
   file:
-    path: "{{ docker_dir }}/{{ container_name }}"
+    path: "{{ docker_dir }}/{{ container_name }}/"
     state: directory
     owner: "{{ username }}"
     group: "{{ username }}"
+    mode: 0755
 
 - name: Install the configuration template
   template:
@@ -36,7 +14,7 @@
     owner: "{{ username }}"
     group: "{{ username }}"
   register: configuration
- 
+
 - name: Install the users template
   template:
     src: users_database.yml.j2
@@ -44,6 +22,21 @@
     owner: "{{ username }}"
     group: "{{ username }}"
   register: users
+
+- name: Make sure the {{ container_name }} container is created and running
+  docker_container:
+    name: "{{ container_name }}"
+    image: "authelia/authelia:latest"
+    pull: true
+    networks:
+      - name: swag_public_network
+    state: "started"
+    env:
+      TZ: "{{ timezone }}"
+    volumes:
+      - "{{ docker_dir }}/{{ container_name }}:/config"
+    restart_policy: unless-stopped
+  register: container
 
 - name: Restart the docker container on change
   docker_container:
