--- a/roles/containers/system/jackett/defaults/main.yml
+++ b/roles/containers/system/jackett/defaults/main.yml
@@ -3,7 +3,7 @@ container_name: jackett
 
 dashboard_url: "https://jackett.{{ host_local }}/"
 
-homer_category: system
+homer_category: media
 
 dashboard_name: Jackett
 
