--- a/roles/network/wireguard/tasks/main.yml
+++ b/roles/network/wireguard/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: Create the necessary {{ container_name }} folders
+  file:
+    path: "{{ docker_dir }}/{{ container_name }}/config/"
+    state: directory
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: 0755
+
 - name: Make sure the Wireguard container is created and running
   docker_container:
     name: "{{ container_name }}"
@@ -15,10 +23,13 @@
       "PUID": "{{ guid }}"
       "PGID": "{{ guid }}"
       "TZ": "{{ timezone }}"
-      "SERVERURL": "{{ vpn_host }}"
+      "SERVERURL": "wireguard.{{ host }}"
+      "INTERNAL_SUBNET": "{{ wireguard_subnet }}"
       "PEERS": "{{ ', '.join(wireguard_peers) }}"
+      "PEERDNS": 192.168.1.2
+      "ALLOWEDIPS": "192.168.1.0/24,{{ '.'.join(wireguard_subnet.split('.')[0:3]) }}.1"
     ports:
-      - "51820/udp:51820/udp"
+      - "192.168.1.4:51820/udp:51820/udp"
     volumes:
       - "{{ docker_dir }}/{{ container_name }}/config:/config"
       - "/lib/modules:/lib/modules"
